# kin-gen

./: .gitmodules  CMakeLists.txt  LICENSE  ilk-compiler.sh  ilk-generator.sh  manifest.xml  readme.md  rmtool.sh  sample.sh
taste-gen/: .gitignore  GenerateTasteBlock.lua  asn1_types.lua  common.lua  config.yml  constants.lua  helpers.lua  keywords.lua  makefile_generator.lua  metadata.yml  metadata_interpreter.lua  read_config.lua  readme.md  transformations_generator.lua  usedconv.lua  user_init_bash_generator.lua  usercode_wrapper_generator.lua  variable_names.lua
taste-gen/luarocks/: lua-common-tools-0.1-2.rockspec
taste-gen/test/: RunUnitTests.lua
taste-gen/test/expected/: user_init_pre.sh
taste-gen/type_conversions/: static_conversions.h
taste-gen/type_conversions/asn/: mybase.asn  taste-extended.asn  userdefs-base.asn
taste-gen/type_conversions/dproto/: types.dproto
tests/: readme.md
tests/coverage/: README.TXT  clean_results.sh  coverage.sh  display_results_in_firefox.sh  generate_coverage_reports.sh
tests/functional/: README.TXT  clean_results.sh  readme.md  run_functional_tests.sh
tests/generation/: README.TXT  clean_results.sh  generate.sh  readme.md
tests/memory/: README.TXT  generate_memory_reports.sh  memory.sh
tests/model-validation/: runtest.sh
tests/models/cmm/: robot.kindsl
tests/models/malformed/: cmm-disconnected.kindsl  (+2 more)
tests/sample-queries/: fk-dataset  query-ur5-sample.yaml
tests/timing/: README.TXT  generate_timing_reports.sh  timing.sh
tests/urdf-conversion/: runtest.sh
tests/utils/: diff-style.css  diff2html.py
(+14 files in other folders)
